--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <body>
         <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>Moving!</strong> This page will be deleted soon. Please go <a href="https://3kh0.github.io/projects/retro-bowl/">here</a> for the new version!
+  <strong>Site made by Andrew Liu</strong> Retro Bowl Unblocked.
 </div>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
         <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="display:none;"/>
