--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <body>
         <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong> mm </strong> Retro Bowl Unblocked. <a href="https://mmtrucefacts.github.io">https://mmtrucefacts.github.io</a>
+  <strong> By Andrew Liu</strong> Retro Bowl Unblocked.  <a href="https://mmtrucefacts.github.io">https://mmtrucefacts.github.io</a>
 </div>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
         <img src="html5game/splash.png" id="GM4HTML5_loadingscreen" alt="GameMaker:HTML5 loading screen" style="display:none;"/>
